--- a/notebooks/NewsLLMQuerys.ipynb
+++ b/notebooks/NewsLLMQuerys.ipynb
@@ -4,28 +4,119 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "USER_AGENT environment variable not set, consider setting it to identify your requests.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "import importlib\n",
+    "import sys\n",
+    "sys.path.append('../src')\n",
+    "importlib.reload(sys)\n",
+    "from models import work_flow\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "zsh:1: command not found: aws\n",
-      "zsh:1: command not found: aws\n",
-      "zsh:1: command not found: aws\n"
+      "Initial message: content='System: You are a helpful AI that answers questions about the news related to the 2018 tariffs that impacted inflation of goods and services in Canada and USA. Use the tools at your disposal to look up news articles or data from the CPI goods and services for Canada and US as a surrogate inflation to help support your answer.\\n\\nQuestion: What is the inflation rate for all-items in the USA in 2018?' additional_kwargs={} response_metadata={}\n",
+      "What is the inflation rate for all-items in the USA in 2018?\n",
+      "Workflow result: ['  The inflation rate for all-items in the USA in 2018 was 2.4%.']\n"
      ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "access_key_id = input()\n",
-    "secret_access_key = input()\n",
-    "\n",
-    "\n",
-    "!aws configure set default.aws_access_key_id {access_key_id}\n",
-    "!aws configure set default.aws_secret_access_key {secret_access_key}\n",
-    "!aws configure set default.region us-west-2"
+    "try:\n",
+    "    result = work_flow(\"What is the inflation rate for all-items in the USA in 2018?\")\n",
+    "    print(\"Workflow result:\", result)\n",
+    "except Exception as e:\n",
+    "    print(\"An error occurred:\", str(e))\n",
+    "    import traceback\n",
+    "    traceback.print_exc()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
