Changes to DataCleaning and FeatureSelection

--- a/notebooks/NewsLLMQuerys.ipynb
+++ b/notebooks/NewsLLMQuerys.ipynb
@@ -49,22 +49,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initial message: content='System: You are a helpful AI that answers questions about the news related to the 2018 tariffs that impacted inflation of goods and services in Canada and USA. Use the tools at your disposal to look up news articles or data from the CPI goods and services for Canada and US as a surrogate inflation to help support your answer.\\n\\nQuestion: What is the inflation rate for all-items in the USA in 2018?' additional_kwargs={} response_metadata={}\n",
-      "What is the inflation rate for all-items in the USA in 2018?\n",
-      "Workflow result: ['  The inflation rate for all-items in the USA in 2018 was 2.4%.']\n"
+      "Initial message: content='System: You are a helpful AI that answers questions about the news related to the 2018 tariffs that impacted inflation of goods and services in Canada and USA. Use the tools at your disposal to look up news articles or data from the CPI goods and services for Canada and US as a surrogate inflation to help support your answer.\\n\\nQuestion: Which itemset from the CPI dataset was most inflated due to tariffs in 2018 for Canada?' additional_kwargs={} response_metadata={}\n",
+      "Which itemset from the CPI dataset was most inflated due to tariffs in 2018 for Canada?\n",
+      "Workflow result: ['  The itemset from the CPI dataset that was most inflated due to tariffs in 2018', 'for Canada was the \"Food\" itemset.']\n"
      ]
     }
    ],
    "source": [
     "try:\n",
-    "    result = work_flow(\"What is the inflation rate for all-items in the USA in 2018?\")\n",
+    "    result = work_flow(\"Which itemset from the CPI dataset was most inflated due to tariffs in 2018 for Canada?\")\n",
     "    print(\"Workflow result:\", result)\n",
     "except Exception as e:\n",
     "    print(\"An error occurred:\", str(e))\n",
