made the narrative more precise

--- a/notebooks/Official_Differences_and_RC.ipynb
+++ b/notebooks/Official_Differences_and_RC.ipynb
@@ -5165,7 +5165,7 @@
    "source": [
     "\n",
     "\n",
-    "#differences in differences appears to confirm little impact on overall groceries - let us examine why with datasets of export and import\n",
+    "#differences in differences shows little impact for American groceries however on very short term impact (1 month) whereas in the Canadian dataset there was more of an impact for American tariffs on Canadian goods - let us examine why with datasets of export and import\n",
     "\n",
     "\n",
     "\n"
@@ -8551,7 +8551,7 @@
    "source": [
     "#this visual trend is not picked up by statistics - which means there was lower impact on inflation perhaps because of the already abundance of clothing in stores and the already lack of demand\n",
     "\n",
-    "#In fact the effect of the tariffs was not seen until during May 2019 - August 2019 which coincides with food manufacturing increases meaning there was a lack of supply for clothing which is why there was inflation, this impact was significant. "
+    "#In fact the effect of the tariffs was not seen until during March 2019 - August 2019 which coincides with food manufacturing increases meaning there was a lack of supply for clothing which is why there was inflation, this impact was significant. "
    ]
   },
   {
@@ -12230,8 +12230,8 @@
    "source": [
     "#It seems clothing and footwear have a seasonal impact for both countries but\n",
     "#The american market seemed less impacted by the tariffs and while clothing did appear to reduce supply, the abundance of normal clothing perhaps was able to account for it. In fact it appears manufacturing was not completely impacted except for month to month during tariffs until near COVID period.\n",
-    "    \n",
-    "#The Canadian market was more impacted by the tariffs and the recovery was not as strong as the American market - the impact of the tariffs from Trump began seeing an effect in March 2019 due to the high supply of clothing already in retail stores. \n",
+    "#The american clothing market inflation increased during the treatment period due to American tariffs which may have been beneficial for the clothing industry but this was reversed by Canadian tariffs.    \n",
+    "#The Canadian market for clothing and footwear was more impacted by the tariffs and the recovery was not as strong as the American market - the impact of the tariffs from Trump began seeing an effect in March 2019 due to the high supply of clothing already in retail stores. \n",
     "#Manufacturing for clothing was affected by August 2018 but impact on retail stores was not until March 2019 and was very disrupted near COVID period.\n",
     "\n",
     "\n"
