Added and subtracted from narrative

--- a/notebooks/Official_Differences_and_RC.ipynb
+++ b/notebooks/Official_Differences_and_RC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1222,13 +1222,6 @@
     "#df_sales for Canada and USA\n",
     "df_sales = pd.read_csv(\"../data/processed/Canada_Sales_Processed.csv\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -3839,11 +3832,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
@@ -5152,13 +5140,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 41,
    "metadata": {},
    "outputs": [],
@@ -5223,13 +5204,6 @@
     "print(USA_sales.tail())\n",
     "print(USA_sales_groceries_vehicles.tail())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -5311,15 +5285,6 @@
    "source": [
     "for column in USA_sales_groceries_vehicles['cat_idx'].unique():\n",
     "    print(column)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
    ]
   },
   {
@@ -7024,30 +6989,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
@@ -7112,11 +7053,6 @@
     "\n",
     "((USA_parallel_trends_groceries|Canada_parallel_trends_groceries)&(USA_groceries_supply_demand | Canada_groceries_supply_demand)).configure_axis(grid=False).properties(title = alt.TitleParams(text = 'US and Canada Groceries Inflation and Supply and Demand', subtitle = 'The tariffs caused a waves of inflation in groceries in both countries with food manufacturing being more affected in Canada than US')).save('US_Canada_Groceries_Inflation_Supply_Demand.html')\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -7338,20 +7274,6 @@
     "    color='North American Industry Classification System (NAICS)'\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -8551,15 +8473,8 @@
    "source": [
     "#this visual trend is not picked up by statistics - which means there was lower impact on inflation perhaps because of the already abundance of clothing in stores and the already lack of demand\n",
     "\n",
-    "#In fact the effect of the tariffs was not seen until during March 2019 - August 2019 which coincides with food manufacturing increases meaning there was a lack of supply for clothing which is why there was inflation, this impact was significant. "
+    "#In fact the effect of the tariffs was not seen until during March 2019 - August 2019 meaning there was a lack of supply for clothing which is why there was inflation, this impact was significant. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -8567,7 +8482,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#It appears to have caused a decrease in orders or manufacturing demand which means less supply for clothing and footwear, however, demand was still above supply in this time frame - the impact may not have been felt until in May 2019 because of the already high supply of clothing and footwear in retail stores\n",
+    "#It appears to have caused a decrease in orders or manufacturing demand which means less supply for clothing and footwear, however, demand was still above supply in this time frame - the impact may not have been felt until in March 2019 because of the already high supply of clothing and footwear in retail stores\n",
     "\n"
    ]
   },
@@ -10105,16 +10020,6 @@
     "\n",
     "\n",
     "USA_leather = plot_supply_and_demand_canada(USA_sales, \"Leather and Allied Products\", '2017-01-01', '2019-10-01', \"Finished Goods Inventories Percent Change Monthly\", \"Value of Shipments\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n"
    ]
   },
   {
@@ -12231,8 +12136,8 @@
     "#It seems clothing and footwear have a seasonal impact for both countries but\n",
     "#The american market seemed less impacted by the tariffs and while clothing did appear to reduce supply, the abundance of normal clothing perhaps was able to account for it. In fact it appears manufacturing was not completely impacted except for month to month during tariffs until near COVID period.\n",
     "#The american clothing market inflation increased during the treatment period due to American tariffs which may have been beneficial for the clothing industry but this was reversed by Canadian tariffs.    \n",
-    "#The Canadian market for clothing and footwear was more impacted by the tariffs and the recovery was not as strong as the American market - the impact of the tariffs from Trump began seeing an effect in March 2019 due to the high supply of clothing already in retail stores. \n",
-    "#Manufacturing for clothing was affected by August 2018 but impact on retail stores was not until March 2019 and was very disrupted near COVID period.\n",
+    "#The Canadian market for clothing and footwear was more impacted by the tariffs and the recovery was not as strong as the American market - the impact of the tariffs from Trump had an estimated effect in March 2019 due to the high supply of clothing already in retail stores. \n",
+    "#In other words, manufacturing for clothing was affected by August 2018 but impact on retail stores was not until March 2019 and was very disrupted near COVID period.\n",
     "\n",
     "\n"
    ]
