Add final touches to notebooks and arima_model_function

--- a/notebooks/Modelling: US_arima_forecasts.ipynb
+++ b/notebooks/Modelling: US_arima_forecasts.ipynb
@@ -38,7 +38,7 @@
         "from statsmodels.tsa.ar_model import AutoReg\n",
         "from statsmodels.tsa.stattools import adfuller, acf, q_stat\n",
         "\n",
-        "from arima_model_function import arima_model, plot_arima_results, plot_pacf_for_arima"
+        "from models import arima_model, plot_arima_results, plot_pacf_for_arima"
       ]
     },
     {
@@ -1305,8 +1305,7 @@
       },
       "outputs": [],
       "source": [
-        "for i in shelter_clothing_df.columns:\n",
-        ""
+        "for i in shelter_clothing_df.columns:\n"
       ]
     },
     {
@@ -1320,6 +1319,9 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "language": "python",
@@ -1336,9 +1338,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.11.9"
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
