--- a/notebooks/Data_Cleaning_and_Manipulation: Main_Datasets.ipynb
+++ b/notebooks/Data_Cleaning_and_Manipulation: Main_Datasets.ipynb
@@ -35,120 +35,20 @@
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   cat_idx cat_code                                cat_desc  cat_indent\n",
-      "0        1      MTM                     Total Manufacturing           0\n",
-      "1        2      MXT  Manufacturing Excluding Transportation           0\n",
-      "2        3      MXD         Manufacturing Excluding Defense           0\n",
-      "3        4      MTU      Manufacturing with Unfilled Orders           0\n",
-      "4        5      MDM                           Durable Goods           0\n",
-      "   dt_idx dt_code                             dt_desc dt_unit\n",
-      "0       1      VS                  Value of Shipments    MLN$\n",
-      "1       2      NO                          New Orders    MLN$\n",
-      "2       3      UO                     Unfilled Orders    MLN$\n",
-      "3       4      TI                   Total Inventories    MLN$\n",
-      "4       5      MI  Materials and Supplies Inventories    MLN$\n",
-      "   per_idx per_name\n",
-      "0        1   Jan-92\n",
-      "1        2   Feb-92\n",
-      "2        3   Mar-92\n",
-      "3        4   Apr-92\n",
-      "4        5   May-92\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '../data/processed/dict_category_USA.xlsx'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 7\u001b[0m\n\u001b[1;32m      4\u001b[0m df_USA_Sales \u001b[38;5;241m=\u001b[39m load_data(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../data/raw/M3-mf.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.csv\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      5\u001b[0m df_Canada_Number_Groceries \u001b[38;5;241m=\u001b[39m load_data(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../data/raw/20100056.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.csv\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 7\u001b[0m df_category_dict \u001b[38;5;241m=\u001b[39m \u001b[43mload_data\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m../data/processed/dict_category_USA.xlsx\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m.xlsx\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      8\u001b[0m df_datatypes_dict \u001b[38;5;241m=\u001b[39m load_data(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../data/processed/dict_datatypes_USA.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.csv\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      9\u001b[0m df_date_dict \u001b[38;5;241m=\u001b[39m load_data(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../data/processed/dict_date_USA.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.csv\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "File \u001b[0;32m~/Desktop/GoodsComparison2018Tariffs/notebooks/../src/data/make_dataset.py:43\u001b[0m, in \u001b[0;36mload_data\u001b[0;34m(input_filepath, which_data_file, header)\u001b[0m\n\u001b[1;32m     41\u001b[0m     data \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(input_filepath, header \u001b[38;5;241m=\u001b[39m header)\n\u001b[1;32m     42\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m---> 43\u001b[0m     data \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_excel\u001b[49m\u001b[43m(\u001b[49m\u001b[43minput_filepath\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mheader\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mheader\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     44\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m data\n",
+      "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/pandas/io/excel/_base.py:495\u001b[0m, in \u001b[0;36mread_excel\u001b[0;34m(io, sheet_name, header, names, index_col, usecols, dtype, engine, converters, true_values, false_values, skiprows, nrows, na_values, keep_default_na, na_filter, verbose, parse_dates, date_parser, date_format, thousands, decimal, comment, skipfooter, storage_options, dtype_backend, engine_kwargs)\u001b[0m\n\u001b[1;32m    493\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(io, ExcelFile):\n\u001b[1;32m    494\u001b[0m     should_close \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m--> 495\u001b[0m     io \u001b[38;5;241m=\u001b[39m \u001b[43mExcelFile\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    496\u001b[0m \u001b[43m        \u001b[49m\u001b[43mio\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    497\u001b[0m \u001b[43m        \u001b[49m\u001b[43mstorage_options\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mstorage_options\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    498\u001b[0m \u001b[43m        \u001b[49m\u001b[43mengine\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mengine\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    499\u001b[0m \u001b[43m        \u001b[49m\u001b[43mengine_kwargs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mengine_kwargs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    500\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    501\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m engine \u001b[38;5;129;01mand\u001b[39;00m engine \u001b[38;5;241m!=\u001b[39m io\u001b[38;5;241m.\u001b[39mengine:\n\u001b[1;32m    502\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    503\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEngine should not be specified when passing \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    504\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124man ExcelFile - ExcelFile already has the engine set\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    505\u001b[0m     )\n",
+      "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/pandas/io/excel/_base.py:1550\u001b[0m, in \u001b[0;36mExcelFile.__init__\u001b[0;34m(self, path_or_buffer, engine, storage_options, engine_kwargs)\u001b[0m\n\u001b[1;32m   1548\u001b[0m     ext \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mxls\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1549\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m-> 1550\u001b[0m     ext \u001b[38;5;241m=\u001b[39m \u001b[43minspect_excel_format\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   1551\u001b[0m \u001b[43m        \u001b[49m\u001b[43mcontent_or_path\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mpath_or_buffer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstorage_options\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mstorage_options\u001b[49m\n\u001b[1;32m   1552\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1553\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m ext \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m   1554\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m   1555\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mExcel file format cannot be determined, you must specify \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1556\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124man engine manually.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1557\u001b[0m         )\n",
+      "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/pandas/io/excel/_base.py:1402\u001b[0m, in \u001b[0;36minspect_excel_format\u001b[0;34m(content_or_path, storage_options)\u001b[0m\n\u001b[1;32m   1399\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(content_or_path, \u001b[38;5;28mbytes\u001b[39m):\n\u001b[1;32m   1400\u001b[0m     content_or_path \u001b[38;5;241m=\u001b[39m BytesIO(content_or_path)\n\u001b[0;32m-> 1402\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[43mget_handle\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   1403\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcontent_or_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mrb\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstorage_options\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mstorage_options\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mis_text\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\n\u001b[1;32m   1404\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m handle:\n\u001b[1;32m   1405\u001b[0m     stream \u001b[38;5;241m=\u001b[39m handle\u001b[38;5;241m.\u001b[39mhandle\n\u001b[1;32m   1406\u001b[0m     stream\u001b[38;5;241m.\u001b[39mseek(\u001b[38;5;241m0\u001b[39m)\n",
+      "File \u001b[0;32m~/Library/Python/3.9/lib/python/site-packages/pandas/io/common.py:882\u001b[0m, in \u001b[0;36mget_handle\u001b[0;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001b[0m\n\u001b[1;32m    873\u001b[0m         handle \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mopen\u001b[39m(\n\u001b[1;32m    874\u001b[0m             handle,\n\u001b[1;32m    875\u001b[0m             ioargs\u001b[38;5;241m.\u001b[39mmode,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    878\u001b[0m             newline\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m    879\u001b[0m         )\n\u001b[1;32m    880\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    881\u001b[0m         \u001b[38;5;66;03m# Binary mode\u001b[39;00m\n\u001b[0;32m--> 882\u001b[0m         handle \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mhandle\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mioargs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmode\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    883\u001b[0m     handles\u001b[38;5;241m.\u001b[39mappend(handle)\n\u001b[1;32m    885\u001b[0m \u001b[38;5;66;03m# Convert BytesIO or file objects passed with an encoding\u001b[39;00m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../data/processed/dict_category_USA.xlsx'"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>per_idx</th>\n",
-       "      <th>cat_idx</th>\n",
-       "      <th>dt_idx</th>\n",
-       "      <th>geo_idx</th>\n",
-       "      <th>is_adj</th>\n",
-       "      <th>val</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>209438.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>232679.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>249673.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>239666.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>243231.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   per_idx  cat_idx  dt_idx  geo_idx  is_adj       val\n",
-       "0        1        1       1        1       0  209438.0\n",
-       "1        2        1       1        1       0  232679.0\n",
-       "2        3        1       1        1       0  249673.0\n",
-       "3        4        1       1        1       0  239666.0\n",
-       "4        5        1       1        1       0  243231.0"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -162,15 +62,10 @@
     "df_datatypes_dict = load_data('../data/processed/dict_datatypes_USA.csv', '.csv')\n",
     "df_date_dict = load_data('../data/processed/dict_date_USA.csv', '.csv')\n",
     "\n",
-    "df_category_groceries_vehicles = load_data('../data/processed/dict_category_groceries_vehicles.csv', '.csv')\n",
-    "df_datatypes_groceries_vehicles = load_data('../data/processed/dict_datatype_grocery_vehicles.csv', '.csv')\n",
-    "df_date_groceries_vehicles = load_data('../data/processed/dict_date_groceries_vehicle.csv', '.csv')\n",
     "\n",
     "\n",
-    "print(df_category_dict.head())\n",
-    "print(df_datatypes_dict.head())\n",
-    "print(df_date_dict.head())\n",
-    "df_USA_Sales.head()\n"
+    "\n",
+    "\n"
    ]
   },
   {
@@ -178,34 +73,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# # Ensure these columns exist and contain numeric data\n",
-    "# df_category_groceries_vehicles = df_category_groceries_vehicles[['cat_idx', 'cat_desc']]\n",
-    "# df_datatypes_groceries_vehicles = df_datatypes_groceries_vehicles[['dt_idx', 'dt_desc']]\n",
-    "# df_date_groceries_vehicles = df_date_groceries_vehicles[['per_idx', 'per_name']]  # Assuming 'per_desc' exists\n",
-    "\n",
-    "# # Convert to int64, ignoring any errors\n",
-    "# df_category_groceries_vehicles['cat_idx'] = pd.to_numeric(df_category_groceries_vehicles['cat_idx'], errors='coerce').astype('int64')\n",
-    "# df_datatypes_groceries_vehicles['dt_idx'] = pd.to_numeric(df_datatypes_groceries_vehicles['dt_idx'], errors='coerce').astype('int64')\n",
-    "# df_date_groceries_vehicles['per_idx'] = pd.to_numeric(df_date_groceries_vehicles['per_idx'], errors='coerce').astype('int64')\n",
-    "\n",
-    "\n",
-    "\n",
-    "# # Convert df_USA_Sales columns to int64\n",
-    "# df_USA_Sales_Groceries_Vehicles['cat_idx'] = pd.to_numeric(df_USA_Sales_Groceries_Vehicles['cat_idx'], errors='coerce').astype('int64')\n",
-    "# df_USA_Sales_Groceries_Vehicles['dt_idx'] = pd.to_numeric(df_USA_Sales_Groceries_Vehicles['dt_idx'], errors='coerce').astype('int64')\n",
-    "# df_USA_Sales_Groceries_Vehicles['per_idx'] = pd.to_numeric(df_USA_Sales_Groceries_Vehicles['per_idx'], errors='coerce').astype('int64')\n",
-    "\n",
-    "# # Create mapping dictionaries\n",
-    "# cat_dict_grocery = dict(zip(df_category_groceries_vehicles['cat_idx'], df_category_groceries_vehicles['cat_desc']))\n",
-    "# dt_dict_grocery = dict(zip(df_datatypes_groceries_vehicles['dt_idx'], df_datatypes_groceries_vehicles['dt_desc']))\n",
-    "# per_dict_grocery = dict(zip(df_date_groceries_vehicles['per_idx'], df_date_groceries_vehicles['per_name']))\n",
-    "\n",
-    "# # Apply mapping\n",
-    "# df_USA_Sales_Groceries_Vehicles['cat_idx'] = df_USA_Sales_Groceries_Vehicles['cat_idx'].map(cat_dict_grocery)\n",
-    "# df_USA_Sales_Groceries_Vehicles['dt_idx'] = df_USA_Sales_Groceries_Vehicles['dt_idx'].map(dt_dict_grocery)\n",
-    "# df_USA_Sales_Groceries_Vehicles['per_idx'] = df_USA_Sales_Groceries_Vehicles['per_idx'].map(per_dict_grocery)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -213,21 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "# df_USA_Sales_Groceries_Vehicles['per_idx'] = df_USA_Sales_Groceries_Vehicles['per_idx'].astype(str)\n",
-    "# df_USA_Sales_Groceries_Vehicles['Month'] = df_USA_Sales_Groceries_Vehicles['per_idx'].str.split('-').str[0]\n",
-    "# df_USA_Sales_Groceries_Vehicles['Year'] = df_USA_Sales_Groceries_Vehicles['per_idx'].str.split('-').str[1]\n",
-    "# dict_year = {}\n",
-    "# for key, value in zip(range(92, 100), range(1992, 2000)):\n",
-    "#     dict_year[str(key)] = str(value)\n",
-    "# for key, value in zip(range(2, 26), range(2000, 2026)):\n",
-    "#     dict_year[str(key)] = str(value)\n",
-    "\n",
-    "# df_USA_Sales_Groceries_Vehicles['Year'] = df_USA_Sales_Groceries_Vehicles['Year'].map(dict_year)\n",
-    "# df_USA_Sales_Groceries_Vehicles['REF_DATE'] = pd.to_datetime(df_USA_Sales_Groceries_Vehicles['Year'] + '-' + df_USA_Sales_Groceries_Vehicles['Month'] + '-01')\n",
-    "# df_USA_Sales_Groceries_Vehicles.drop(columns = ['per_idx', 'Year', 'Month'], inplace=True)\n",
-    "# print(df_USA_Sales_Groceries_Vehicles.head())"
+    "\n"
    ]
   },
   {
