add readme license and update notebooks

--- a/notebooks/Analysis_Visuals_and_Models: Shelter.ipynb
+++ b/notebooks/Analysis_Visuals_and_Models: Shelter.ipynb
@@ -434,6 +434,251 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>REF_DATE</th>\n",
+       "      <th>GEO</th>\n",
+       "      <th>DGUID</th>\n",
+       "      <th>North American Industry Classification System (NAICS)</th>\n",
+       "      <th>Sales</th>\n",
+       "      <th>Adjustments</th>\n",
+       "      <th>UOM</th>\n",
+       "      <th>UOM_ID</th>\n",
+       "      <th>SCALAR_FACTOR</th>\n",
+       "      <th>SCALAR_ID</th>\n",
+       "      <th>VECTOR</th>\n",
+       "      <th>COORDINATE</th>\n",
+       "      <th>VALUE</th>\n",
+       "      <th>STATUS</th>\n",
+       "      <th>SYMBOL</th>\n",
+       "      <th>TERMINATED</th>\n",
+       "      <th>DECIMALS</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2017-01</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>2016A000011124</td>\n",
+       "      <td>Retail trade [44-45]</td>\n",
+       "      <td>Total retail sales</td>\n",
+       "      <td>Unadjusted</td>\n",
+       "      <td>Dollars</td>\n",
+       "      <td>81</td>\n",
+       "      <td>thousands</td>\n",
+       "      <td>3</td>\n",
+       "      <td>v1446859481</td>\n",
+       "      <td>1.1.1.1</td>\n",
+       "      <td>41377009.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2017-01</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>2016A000011124</td>\n",
+       "      <td>Retail trade [44-45]</td>\n",
+       "      <td>Total retail sales</td>\n",
+       "      <td>Seasonally adjusted</td>\n",
+       "      <td>Dollars</td>\n",
+       "      <td>81</td>\n",
+       "      <td>thousands</td>\n",
+       "      <td>3</td>\n",
+       "      <td>v1446859483</td>\n",
+       "      <td>1.1.1.2</td>\n",
+       "      <td>50417235.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2017-01</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>2016A000011124</td>\n",
+       "      <td>Retail trade [44-45]</td>\n",
+       "      <td>Retail e-commerce sales</td>\n",
+       "      <td>Unadjusted</td>\n",
+       "      <td>Dollars</td>\n",
+       "      <td>81</td>\n",
+       "      <td>thousands</td>\n",
+       "      <td>3</td>\n",
+       "      <td>v1446859482</td>\n",
+       "      <td>1.1.2.1</td>\n",
+       "      <td>1110045.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2017-01</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>2016A000011124</td>\n",
+       "      <td>Retail trade [44-45]</td>\n",
+       "      <td>Retail e-commerce sales</td>\n",
+       "      <td>Seasonally adjusted</td>\n",
+       "      <td>Dollars</td>\n",
+       "      <td>81</td>\n",
+       "      <td>thousands</td>\n",
+       "      <td>3</td>\n",
+       "      <td>v1446859484</td>\n",
+       "      <td>1.1.2.2</td>\n",
+       "      <td>1236885.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2017-01</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>2016A000011124</td>\n",
+       "      <td>Motor vehicle and parts dealers [441]</td>\n",
+       "      <td>Total retail sales</td>\n",
+       "      <td>Unadjusted</td>\n",
+       "      <td>Dollars</td>\n",
+       "      <td>81</td>\n",
+       "      <td>thousands</td>\n",
+       "      <td>3</td>\n",
+       "      <td>v1446859485</td>\n",
+       "      <td>1.2.1.1</td>\n",
+       "      <td>10162441.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  REF_DATE     GEO           DGUID  \\\n",
+       "0  2017-01  Canada  2016A000011124   \n",
+       "1  2017-01  Canada  2016A000011124   \n",
+       "2  2017-01  Canada  2016A000011124   \n",
+       "3  2017-01  Canada  2016A000011124   \n",
+       "4  2017-01  Canada  2016A000011124   \n",
+       "\n",
+       "  North American Industry Classification System (NAICS)  \\\n",
+       "0                               Retail trade [44-45]      \n",
+       "1                               Retail trade [44-45]      \n",
+       "2                               Retail trade [44-45]      \n",
+       "3                               Retail trade [44-45]      \n",
+       "4              Motor vehicle and parts dealers [441]      \n",
+       "\n",
+       "                     Sales          Adjustments      UOM  UOM_ID  \\\n",
+       "0       Total retail sales           Unadjusted  Dollars      81   \n",
+       "1       Total retail sales  Seasonally adjusted  Dollars      81   \n",
+       "2  Retail e-commerce sales           Unadjusted  Dollars      81   \n",
+       "3  Retail e-commerce sales  Seasonally adjusted  Dollars      81   \n",
+       "4       Total retail sales           Unadjusted  Dollars      81   \n",
+       "\n",
+       "  SCALAR_FACTOR  SCALAR_ID       VECTOR COORDINATE       VALUE STATUS  SYMBOL  \\\n",
+       "0     thousands          3  v1446859481    1.1.1.1  41377009.0    NaN     NaN   \n",
+       "1     thousands          3  v1446859483    1.1.1.2  50417235.0    NaN     NaN   \n",
+       "2     thousands          3  v1446859482    1.1.2.1   1110045.0    NaN     NaN   \n",
+       "3     thousands          3  v1446859484    1.1.2.2   1236885.0    NaN     NaN   \n",
+       "4     thousands          3  v1446859485    1.2.1.1  10162441.0    NaN     NaN   \n",
+       "\n",
+       "   TERMINATED  DECIMALS  \n",
+       "0         NaN         0  \n",
+       "1         NaN         0  \n",
+       "2         NaN         0  \n",
+       "3         NaN         0  \n",
+       "4         NaN         0  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df_20100056 = pd.read_csv('../data/raw/20100056.csv')\n",
+    "df_20100056.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Retail trade [44-45]\n",
+      "Motor vehicle and parts dealers [441]\n",
+      "Automobile dealers [4411]\n",
+      "New car dealers [44111]\n",
+      "Used car dealers [44112]\n",
+      "Other motor vehicle dealers [4412]\n",
+      "Automotive parts, accessories and tire retailers [4413]\n",
+      "Building material and garden equipment and supplies dealers [444]\n",
+      "Food and beverage retailers [445]\n",
+      "Grocery and convenience retailers [4451]\n",
+      "Supermarkets and other grocery retailers (except convenience retailers) [44511]\n",
+      "Convenience retailers and vending machine operators [44513]\n",
+      "Specialty food retailers [4452]\n",
+      "Beer, wine and liquor retailers [4453]\n",
+      "Furniture, home furnishings, electronics and appliances retailers [449]\n",
+      "Furniture, floor covering, window treatment and other home furnishings retailers [4491]\n",
+      "Furniture retailers [44911]\n",
+      "Floor covering, window treatment and other home furnishing retailers [44912]\n",
+      "Electronics and appliances retailers [4492]\n",
+      "General merchandise retailers [455]\n",
+      "Health and personal care retailers [456]\n",
+      "Gasoline stations and fuel vendors [457]\n",
+      "Clothing, clothing accessories, shoes, jewelry, luggage and leather goods retailers [458]\n",
+      "Clothing and clothing accessories retailers [4581]\n",
+      "Shoe retailers [4582]\n",
+      "Jewellery, luggage and leather goods retailers [4583]\n",
+      "Sporting goods, hobby, musical instrument, book, and miscellaneous retailers [459]\n",
+      "Sporting goods, hobby, musical instrument, book retailers and news dealers [459A]\n",
+      "Miscellaneous retailers [459B]\n",
+      "Cannabis retailers [459993]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for column in df_20100056['North American Industry Classification System (NAICS)'].unique():\n",
+    "    print(column)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -456,7 +701,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
