--- a/notebooks/Visualization: US_tariff_tradewar_timeline.ipynb
+++ b/notebooks/Visualization: US_tariff_tradewar_timeline.ipynb
@@ -217,7 +217,7 @@
     }
    ],
    "source": [
-    "us_cpi_df = pd.read_csv(r\"C:\\Users\\aswir\\OneDrive\\Documents\\Capstone Project\\USACPI_2018_2019.csv\")\n",
+    "us_cpi_df = pd.read_excel(r\"../data/raw/revised-seasonally-adjusted-indexes-2021.xlsx\")\n",
     "us_cpi_df.head()"
    ]
   },
@@ -338,7 +338,7 @@
     }
    ],
    "source": [
-    "all_items_df = us_cpi_df[(us_cpi_df['TITLE'] == 'All items') & (us_cpi_df['DATA TYPE'] == 'SEASONALLY ADJUSTED INDEX')].drop_duplicates('YEAR')\n",
+    "all_items_df = us_cpi_df[(us_cpi_df['TITLE'] == 'All items') & (us_cpi_df['DATA_TYPE'] == 'SEASONALLY ADJUSTED INDEX')].drop_duplicates('YEAR')\n",
     "all_items_df"
    ]
   },
@@ -356,7 +356,7 @@
     }
    ],
    "source": [
-    "df_long = all_items_df.melt(id_vars=[\"ITEM\", \"TITLE\", \"series id\", \"DATA TYPE\", \"YEAR\"],\n",
+    "df_long = all_items_df.melt(id_vars=[\"ITEM\", \"TITLE\", \"seriesid\", \"DATA_TYPE\", \"YEAR\"],\n",
     "                  var_name=\"Month\", value_name=\"CPI VALUE\")\n",
     "\n",
     "# Convert month abbreviations to numbers\n",
