--- a/notebooks/Visualization - Regression_Discontinuity_For_Items_Pre_Post_Tariffs.ipynb
+++ b/notebooks/Visualization - Regression_Discontinuity_For_Items_Pre_Post_Tariffs.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "RoVcUv0C2Tba"
       },
@@ -17,7 +17,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "wvXhYDLM2Tbc",
         "outputId": "95a27a9c-66b6-4419-feb4-54c4f367f4c5"
@@ -27,8 +27,8 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\aswir\\AppData\\Local\\Temp\\ipykernel_33648\\3808761466.py:1: DtypeWarning: Columns (11) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-            "  can_cpi_df = pd.read_csv(r\"C:\\Users\\aswir\\OneDrive\\Documents\\Capstone Project\\18100004.csv\")\n"
+            "/var/folders/t8/6bysc4l55cn05grw21ffck1w0000gn/T/ipykernel_69372/1954868832.py:1: DtypeWarning: Columns (11) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+            "  can_cpi_df = pd.read_csv(r\"../data/raw/18100004.csv\")\n"
           ]
         },
         {
@@ -194,13 +194,13 @@
               "893674        NaN         1  "
             ]
           },
-          "execution_count": 2,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "can_cpi_df = pd.read_csv(r\"C:\\Users\\aswir\\OneDrive\\Documents\\Capstone Project\\18100004.csv\")\n",
+        "can_cpi_df = pd.read_csv(r\"../data/raw/18100004.csv\")\n",
         "can_cpi_df['REF_DATE'] = pd.to_datetime(can_cpi_df['REF_DATE'])\n",
         "can_cpi_df = can_cpi_df[(can_cpi_df['REF_DATE'].dt.year >= 2016) & (can_cpi_df['REF_DATE'].dt.year < 2020)]\n",
         "can_cpi_df = can_cpi_df[can_cpi_df['GEO'] == 'Canada']\n",
@@ -209,7 +209,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "ynD3O7sx2Tbd"
       },
@@ -220,7 +220,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "bl_S-mHY2Tbd",
         "outputId": "ac5e8c8d-d8a3-4066-e549-d066d1badba6"
@@ -309,14 +309,14 @@
               "4                 2  "
             ]
           },
-          "execution_count": 4,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "#First six rows are unneeded meta data describing other things\n",
-        "mapping_df = pd.read_csv(r\"C:\\Users\\aswir\\OneDrive\\Documents\\Capstone Project\\18100004_MetaData.csv\", skiprows=6)\n",
+        "mapping_df = pd.read_csv(r\"../data/raw/18100004_MetaData.csv\", skiprows=6)\n",
         "\n",
         "#first 29 rows are related to provinces and locations which we are not interested in\n",
         "mapping_df = mapping_df.iloc[29:].reset_index(drop=True)\n",
@@ -1020,12 +1020,14 @@
       ],
       "source": [
         "for i in base_names:\n",
-        "    before_after_regression(pivoted_can_df, i, '2018-06-01')\n",
-        ""
+        "    before_after_regression(pivoted_can_df, i, '2018-06-01')\n"
       ]
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "language": "python",
@@ -1041,10 +1043,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.9"
-    },
-    "colab": {
-      "provenance": []
+      "version": "3.9.6"
     }
   },
   "nbformat": 4,
