--- a/notebooks/Data_Exploration_and_Feature_Selection - CACPINormalDistributionTest.ipynb
+++ b/notebooks/Data_Exploration_and_Feature_Selection - CACPINormalDistributionTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "214e4100-41cf-4ae9-afea-a53abe3fa9b0",
    "metadata": {},
    "outputs": [],
@@ -1181,7 +1181,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -1195,7 +1195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
