--- a/notebooks/Visualization - US_tariff_tradewar_timeline.ipynb
+++ b/notebooks/Visualization - US_tariff_tradewar_timeline.ipynb
@@ -4,21 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\aswir\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\dask\\dataframe\\__init__.py:49: FutureWarning: \n",
-      "Dask dataframe query planning is disabled because dask-expr is not installed.\n",
-      "\n",
-      "You can install it with `pip install dask[dataframe]` or `conda install dask`.\n",
-      "This will raise in a future version.\n",
-      "\n",
-      "  warnings.warn(msg, FutureWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import altair as alt\n",
@@ -40,9 +26,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/richardwcheng/Library/Python/3.9/lib/python/site-packages/openpyxl/worksheet/header_footer.py:48: UserWarning: Cannot parse header or footer so it will be ignored\n",
+      "  warn(\"\"\"Cannot parse header or footer so it will be ignored\"\"\")\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -66,8 +60,8 @@
        "      <th></th>\n",
        "      <th>ITEM</th>\n",
        "      <th>TITLE</th>\n",
-       "      <th>series id</th>\n",
-       "      <th>DATA TYPE</th>\n",
+       "      <th>seriesid</th>\n",
+       "      <th>DATA_TYPE</th>\n",
        "      <th>YEAR</th>\n",
        "      <th>JAN</th>\n",
        "      <th>FEB</th>\n",
@@ -90,19 +84,19 @@
        "      <td>All items</td>\n",
        "      <td>CUSR0000SA0</td>\n",
        "      <td>SEASONALLY ADJUSTED INDEX</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>248.859</td>\n",
-       "      <td>249.529</td>\n",
-       "      <td>249.577</td>\n",
-       "      <td>250.227</td>\n",
-       "      <td>250.792</td>\n",
-       "      <td>251.018</td>\n",
-       "      <td>251.214</td>\n",
-       "      <td>251.663</td>\n",
-       "      <td>252.182</td>\n",
-       "      <td>252.772</td>\n",
-       "      <td>252.594</td>\n",
-       "      <td>252.767</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>243.618</td>\n",
+       "      <td>244.006</td>\n",
+       "      <td>243.892</td>\n",
+       "      <td>244.193</td>\n",
+       "      <td>244.004</td>\n",
+       "      <td>244.163</td>\n",
+       "      <td>244.243</td>\n",
+       "      <td>245.183</td>\n",
+       "      <td>246.435</td>\n",
+       "      <td>246.626</td>\n",
+       "      <td>247.284</td>\n",
+       "      <td>247.805</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -110,108 +104,108 @@
        "      <td>All items</td>\n",
        "      <td>CUSR0000SA0</td>\n",
        "      <td>SEASONALLY ADJUSTED INDEX</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>252.718</td>\n",
-       "      <td>253.322</td>\n",
-       "      <td>254.202</td>\n",
-       "      <td>255.211</td>\n",
-       "      <td>255.290</td>\n",
-       "      <td>255.159</td>\n",
-       "      <td>255.685</td>\n",
-       "      <td>256.059</td>\n",
-       "      <td>256.511</td>\n",
-       "      <td>257.244</td>\n",
-       "      <td>257.803</td>\n",
-       "      <td>258.616</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>248.743</td>\n",
+       "      <td>249.439</td>\n",
+       "      <td>249.581</td>\n",
+       "      <td>250.146</td>\n",
+       "      <td>250.779</td>\n",
+       "      <td>251.118</td>\n",
+       "      <td>251.323</td>\n",
+       "      <td>251.749</td>\n",
+       "      <td>252.239</td>\n",
+       "      <td>252.862</td>\n",
+       "      <td>252.657</td>\n",
+       "      <td>252.551</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>SA0</td>\n",
        "      <td>All items</td>\n",
        "      <td>CUSR0000SA0</td>\n",
-       "      <td>SEASONAL FACTOR</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>99.601</td>\n",
-       "      <td>99.784</td>\n",
-       "      <td>99.991</td>\n",
-       "      <td>100.127</td>\n",
-       "      <td>100.317</td>\n",
-       "      <td>100.387</td>\n",
-       "      <td>100.315</td>\n",
-       "      <td>100.192</td>\n",
-       "      <td>100.102</td>\n",
-       "      <td>100.045</td>\n",
-       "      <td>99.780</td>\n",
-       "      <td>99.393</td>\n",
+       "      <td>SEASONALLY ADJUSTED INDEX</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>252.470</td>\n",
+       "      <td>253.135</td>\n",
+       "      <td>254.273</td>\n",
+       "      <td>255.163</td>\n",
+       "      <td>255.325</td>\n",
+       "      <td>255.361</td>\n",
+       "      <td>255.900</td>\n",
+       "      <td>256.179</td>\n",
+       "      <td>256.596</td>\n",
+       "      <td>257.305</td>\n",
+       "      <td>257.788</td>\n",
+       "      <td>258.263</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>SA0</td>\n",
        "      <td>All items</td>\n",
        "      <td>CUSR0000SA0</td>\n",
-       "      <td>SEASONAL FACTOR</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>99.602</td>\n",
-       "      <td>99.784</td>\n",
-       "      <td>100.000</td>\n",
-       "      <td>100.132</td>\n",
-       "      <td>100.314</td>\n",
-       "      <td>100.386</td>\n",
-       "      <td>100.347</td>\n",
-       "      <td>100.195</td>\n",
-       "      <td>100.097</td>\n",
-       "      <td>100.040</td>\n",
-       "      <td>99.769</td>\n",
-       "      <td>99.365</td>\n",
+       "      <td>SEASONALLY ADJUSTED INDEX</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>258.682</td>\n",
+       "      <td>259.007</td>\n",
+       "      <td>258.165</td>\n",
+       "      <td>256.094</td>\n",
+       "      <td>255.944</td>\n",
+       "      <td>257.217</td>\n",
+       "      <td>258.543</td>\n",
+       "      <td>259.580</td>\n",
+       "      <td>260.190</td>\n",
+       "      <td>260.352</td>\n",
+       "      <td>260.721</td>\n",
+       "      <td>261.564</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>SA0</td>\n",
        "      <td>All items</td>\n",
        "      <td>CUSR0000SA0</td>\n",
-       "      <td>UNADJUSTED INDEX</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>247.867</td>\n",
-       "      <td>248.991</td>\n",
-       "      <td>249.554</td>\n",
-       "      <td>250.546</td>\n",
-       "      <td>251.588</td>\n",
-       "      <td>251.989</td>\n",
-       "      <td>252.006</td>\n",
-       "      <td>252.146</td>\n",
-       "      <td>252.439</td>\n",
-       "      <td>252.885</td>\n",
-       "      <td>252.038</td>\n",
-       "      <td>251.233</td>\n",
+       "      <td>SEASONALLY ADJUSTED INDEX</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>262.200</td>\n",
+       "      <td>263.346</td>\n",
+       "      <td>265.028</td>\n",
+       "      <td>266.727</td>\n",
+       "      <td>268.599</td>\n",
+       "      <td>270.955</td>\n",
+       "      <td>272.184</td>\n",
+       "      <td>273.092</td>\n",
+       "      <td>274.214</td>\n",
+       "      <td>276.590</td>\n",
+       "      <td>278.524</td>\n",
+       "      <td>280.126</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  ITEM      TITLE    series id                  DATA TYPE  YEAR      JAN  \\\n",
-       "0  SA0  All items  CUSR0000SA0  SEASONALLY ADJUSTED INDEX  2018  248.859   \n",
-       "1  SA0  All items  CUSR0000SA0  SEASONALLY ADJUSTED INDEX  2019  252.718   \n",
-       "2  SA0  All items  CUSR0000SA0            SEASONAL FACTOR  2018   99.601   \n",
-       "3  SA0  All items  CUSR0000SA0            SEASONAL FACTOR  2019   99.602   \n",
-       "4  SA0  All items  CUSR0000SA0           UNADJUSTED INDEX  2018  247.867   \n",
+       "  ITEM      TITLE     seriesid                  DATA_TYPE  YEAR      JAN  \\\n",
+       "0  SA0  All items  CUSR0000SA0  SEASONALLY ADJUSTED INDEX  2017  243.618   \n",
+       "1  SA0  All items  CUSR0000SA0  SEASONALLY ADJUSTED INDEX  2018  248.743   \n",
+       "2  SA0  All items  CUSR0000SA0  SEASONALLY ADJUSTED INDEX  2019  252.470   \n",
+       "3  SA0  All items  CUSR0000SA0  SEASONALLY ADJUSTED INDEX  2020  258.682   \n",
+       "4  SA0  All items  CUSR0000SA0  SEASONALLY ADJUSTED INDEX  2021  262.200   \n",
        "\n",
        "       FEB      MAR      APR      MAY      JUN      JUL      AUG      SEP  \\\n",
-       "0  249.529  249.577  250.227  250.792  251.018  251.214  251.663  252.182   \n",
-       "1  253.322  254.202  255.211  255.290  255.159  255.685  256.059  256.511   \n",
-       "2   99.784   99.991  100.127  100.317  100.387  100.315  100.192  100.102   \n",
-       "3   99.784  100.000  100.132  100.314  100.386  100.347  100.195  100.097   \n",
-       "4  248.991  249.554  250.546  251.588  251.989  252.006  252.146  252.439   \n",
+       "0  244.006  243.892  244.193  244.004  244.163  244.243  245.183  246.435   \n",
+       "1  249.439  249.581  250.146  250.779  251.118  251.323  251.749  252.239   \n",
+       "2  253.135  254.273  255.163  255.325  255.361  255.900  256.179  256.596   \n",
+       "3  259.007  258.165  256.094  255.944  257.217  258.543  259.580  260.190   \n",
+       "4  263.346  265.028  266.727  268.599  270.955  272.184  273.092  274.214   \n",
        "\n",
        "       OCT      NOV      DEC  \n",
-       "0  252.772  252.594  252.767  \n",
-       "1  257.244  257.803  258.616  \n",
-       "2  100.045   99.780   99.393  \n",
-       "3  100.040   99.769   99.365  \n",
-       "4  252.885  252.038  251.233  "
+       "0  246.626  247.284  247.805  \n",
+       "1  252.862  252.657  252.551  \n",
+       "2  257.305  257.788  258.263  \n",
+       "3  260.352  260.721  261.564  \n",
+       "4  276.590  278.524  280.126  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
